[gd_scene format=3 uid="uid://dfcvnvndr6rso"]

[ext_resource type="Script" uid="uid://c0y6goj1k166x" path="res://client/ui/MainMenu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://km83cj2cr8lj" path="res://client/ui/themes/CyberpunkTheme.tres" id="2_theme"]
[ext_resource type="PackedScene" uid="uid://n7be0giltt24" path="res://client/scenes/menu_background.tscn" id="3_bg"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_menus_template/base/nodes/utilities/capture_focus.gd" id="4_focus"]
[ext_resource type="Script" uid="uid://dmkubt2nsnsbn" path="res://addons/maaacks_menus_template/base/nodes/labels/config_version_label.gd" id="5_ver"]
[ext_resource type="PackedScene" uid="uid://cwt4p3bufkke5" path="res://addons/maaacks_menus_template/base/nodes/windows/confirmation_overlaid_window.tscn" id="6_confirm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_leftpanel"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 32.0
bg_color = Color(0.098, 0.102, 0.141, 0.92)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.745, 0.576, 0.976, 0.9)
corner_radius_top_right = 0
corner_radius_bottom_right = 0
shadow_color = Color(0.0, 0.0, 0.0, 0.5)
shadow_size = 16
shadow_offset = Vector2(4, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
content_margin_left = 16.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 14.0
bg_color = Color(0.098, 0.102, 0.141, 0.0)
border_width_left = 2
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.745, 0.576, 0.976, 0.7)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
content_margin_left = 20.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 14.0
bg_color = Color(0.745, 0.576, 0.976, 0.18)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(1.0, 0.475, 0.776, 1.0)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
shadow_color = Color(1.0, 0.475, 0.776, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
content_margin_left = 20.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 14.0
bg_color = Color(0.745, 0.576, 0.976, 0.3)
border_width_left = 3
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.545, 0.914, 0.992, 1.0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background3D" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="Viewport3D" type="SubViewport" parent="Background3D"]
own_world_3d = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="MenuBG" parent="Background3D/Viewport3D" instance=ExtResource("3_bg")]

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.016, 0.02, 0.04, 0.45)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 140.0
grow_horizontal = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.745, 0.576, 0.976, 1.0)
theme_override_colors/font_shadow_color = Color(0.745, 0.576, 0.976, 0.5)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 12
text = "BLENDARS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MenuHBox" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="LeftPanel" type="PanelContainer" parent="MenuContainer/MenuHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_leftpanel")

[node name="LeftContent" type="VBoxContainer" parent="MenuContainer/MenuHBox/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TopSpacer" type="Control" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuButtonsBoxContainer" type="BoxContainer" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4
vertical = true
script = ExtResource("4_focus")

[node name="NewGameButton" type="Button" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 52)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_normal")
theme_override_colors/font_color = Color(0.973, 0.973, 0.949, 1)
theme_override_colors/font_hover_color = Color(1.0, 0.475, 0.776, 1)
theme_override_colors/font_pressed_color = Color(0.545, 0.914, 0.992, 1)
text = "NEW GAME"

[node name="OptionsButton" type="Button" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 52)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_normal")
theme_override_colors/font_color = Color(0.973, 0.973, 0.949, 1)
theme_override_colors/font_hover_color = Color(1.0, 0.475, 0.776, 1)
theme_override_colors/font_pressed_color = Color(0.545, 0.914, 0.992, 1)
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 52)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_normal")
theme_override_colors/font_color = Color(0.973, 0.973, 0.949, 1)
theme_override_colors/font_hover_color = Color(1.0, 0.475, 0.776, 1)
theme_override_colors/font_pressed_color = Color(0.545, 0.914, 0.992, 1)
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(252, 52)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_btn_normal")
theme_override_colors/font_color = Color(0.973, 0.973, 0.949, 1)
theme_override_colors/font_hover_color = Color(1.0, 0.475, 0.776, 1)
theme_override_colors/font_pressed_color = Color(0.545, 0.914, 0.992, 1)
text = "QUIT"

[node name="BotSpacer" type="Control" parent="MenuContainer/MenuHBox/LeftPanel/LeftContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightFill" type="Control" parent="MenuContainer/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersionMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VersionContainer" type="Control" parent="VersionMargin"]
layout_mode = 2
mouse_filter = 2

[node name="VersionLabel" type="Label" parent="VersionMargin/VersionContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -22.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_colors/font_color = Color(0.384, 0.447, 0.643, 0.7)
theme_override_font_sizes/font_size = 11
text = "v0.0.1"
horizontal_alignment = 2
script = ExtResource("5_ver")

[node name="ExitConfirmation" parent="." instance=ExtResource("6_confirm")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
ui_cancel_closes = false
text = "Выйти из игры?"
title_visible = false

[connection signal="pressed" from="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuHBox/LeftPanel/LeftContent/MenuButtonsBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="confirmed" from="ExitConfirmation" to="." method="_on_exit_confirmation_confirmed"]
